# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheggpy"
version = "1.0.1"
description = "A Python package for interacting with the Chegg API for Chegg Experts"
readme = "README.md"
authors = [{ name = "Harrykp", email = "chaudharyharshit9@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chegg", "automation"]
dependencies = [
    'bs4',
    'requests',
    'colorama',
    'tqdm',
    'tomli',
]
requires-python = ">=3"

[project.optional-dependencies]
dev = ["autopep8", "flake8", "portray"]

[project.urls]
Homepage = "https://github.com/Harry-kp/cheggpy"

[project.scripts]
cheggbot = "cheggpy.__main__:main"

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"cheggpy/__init__.py" = ["{version}"]

[tool.portray]
output_dir = "docs"
